@@ -1,25 +1,27 @@
 package com.savely.socksapp.handler;
 
 import com.savely.socksapp.dto.ResponseError;
-import com.savely.socksapp.exception.BaseSockException;
+import com.savely.socksapp.exception.BaseException;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
+import org.springframework.security.authentication.BadCredentialsException;
+import org.springframework.security.core.AuthenticationException;
+import org.springframework.security.core.userdetails.UsernameNotFoundException;
 import org.springframework.web.bind.MethodArgumentNotValidException;
 import org.springframework.web.bind.annotation.ExceptionHandler;
 import org.springframework.web.bind.annotation.RestControllerAdvice;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @RestControllerAdvice
 public class GeneralHandler {
 
     private final Logger logger = LoggerFactory.getLogger(GeneralHandler.class);
 
-    @ExceptionHandler(BaseSockException.class)
-    public ResponseEntity<ResponseError> handleBaseSockException(BaseSockException e) {
+    @ExceptionHandler(BaseException.class)
+    public ResponseEntity<ResponseError> handleBaseSockException(BaseException e) {
         logger.error(e.getMessage());
         return ResponseEntity
                 .status(e.getHttpStatus())
@@ -31,8 +33,13 @@ public class GeneralHandler {
     public ResponseEntity<List<ResponseError>> handleMethodArgumentNotValidException(MethodArgumentNotValidException e) {
         logger.error(e.getMessage());
         return ResponseEntity.status(HttpStatus.BAD_REQUEST).body(e.getFieldErrors()
-                .stream()
-                .map(error -> new ResponseError("Field - " + error.getField() + ": " + error.getDefaultMessage()))
-                .collect(Collectors.toList()));
+            .stream()
+            .map(error -> new ResponseError("Field - " + error.getField() + ": " + error.getDefaultMessage()))
+            .toList());
+    }
+
+    @ExceptionHandler({UsernameNotFoundException.class, BadCredentialsException.class})
+    public ResponseEntity<ResponseError> handleUsernameNotFoundException(AuthenticationException e) {
+        return ResponseEntity.status(HttpStatus.NOT_FOUND).body(new ResponseError(e.getMessage()));
     }
 }
